Integrate background video animation

--- a/index.html
+++ b/index.html
@@ -17,6 +17,10 @@
 </head>
 
 <body>
+    <video autoplay muted loop playsinline id="bg-video">
+        <source src="assets/video/bg_anim.mp4" type="video/mp4">
+        Votre navigateur ne supporte pas la vidéo.
+    </video>
     <div class="container">
         <header>
             <h1>Calendrier de l'Avent D&D</h1>
