--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calendrier de l'Avent D&D</title>
-    <link rel="stylesheet" href="assets/css/base.css">
-    <link rel="stylesheet" href="assets/css/components.css">
-    <link rel="stylesheet" href="assets/css/modal.css">
-    <link rel="stylesheet" href="assets/css/responsive.css">
+    <link rel="stylesheet" href="assets/css/base.css?v=1">
+    <link rel="stylesheet" href="assets/css/components.css?v=1">
+    <link rel="stylesheet" href="assets/css/modal.css?v=1">
+    <link rel="stylesheet" href="assets/css/responsive.css?v=1">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
@@ -39,8 +39,8 @@
         </div>
     </div>
 
-    <script src="assets/js/data.js"></script>
-    <script src="assets/js/script.js"></script>
+    <script src="assets/js/data.js?v=1"></script>
+    <script src="assets/js/script.js?v=1"></script>
 </body>
 
 </html>
