--- a/index.html
+++ b/index.html
@@ -24,23 +24,54 @@
     <div class="container">
         <header>
             <h1>Calendrier de l'Avent D&D</h1>
-        </header>
-        <main class="calendar-grid" id="calendar-grid">
-            <!-- Les portes seront générées ici par JS -->
-        </main>
-    </div>
+            <!DOCTYPE html>
+            <html lang="fr">
 
-    <div id="modal" class="modal hidden">
-        <div class="modal-content">
-            <span class="close-button">&times;</span>
-            <div id="modal-body">
-                <!-- Contenu de la surprise -->
-            </div>
-        </div>
-    </div>
+            <head>
+                <meta charset="UTF-8">
+                <meta name="viewport" content="width=device-width, initial-scale=1.0">
+                <title>Calendrier de l'Avent D&D</title>
+                <link rel="stylesheet" href="assets/css/base.css?v=2">
+                <link rel="stylesheet" href="assets/css/components.css?v=2">
+                <link rel="stylesheet" href="assets/css/modal.css?v=2">
+                <link rel="stylesheet" href="assets/css/responsive.css?v=2">
+                <link rel="preconnect" href="https://fonts.googleapis.com">
+                <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+                <link
+                    href="https://fonts.googleapis.com/css2?family=MedievalSharp&family=Mountains+of+Christmas:wght@400;700&display=swap"
+                    rel="stylesheet">
+            </head>
 
-    <script src="assets/js/data.js?v=2"></script>
-    <script src="assets/js/script.js?v=2"></script>
-</body>
+            <body>
+                <video autoplay muted loop playsinline id="bg-video">
+                    <source src="assets/video/bg_anim.mp4" type="video/mp4">
+                    Votre navigateur ne supporte pas la vidéo.
+                </video>
+                <div class="container">
+                    <header>
+                        <h1>Calendrier de l'Avent D&D</h1>
+                    </header>
+                    <main class="calendar-grid" id="calendar-grid">
+                        <!-- Les portes seront générées ici par JS -->
+                    </main>
+                </div>
 
-</html>
+                <div id="modal" class="modal hidden">
+                    <div class="modal-content">
+                        <span class="close-button">&times;</span>
+                        <div id="modal-body">
+                            <!-- Contenu de la surprise -->
+                        </div>
+                    </div>
+                </div>
+
+                <div id="lightbox" class="lightbox hidden">
+                    <span class="lightbox-close">&times;</span>
+                    <img id="lightbox-img" src="" alt="Full resolution">
+                </div>
+
+                <script src="assets/js/data.js?v=2"></script>
+                <script src="assets/js/script.js?v=2"></script>
+            </body>
+
+            </html>
